--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -58,7 +58,7 @@
 .lowerfooter {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     color: white;
     padding: 0px 50px 30px 50px;
     align-items: center;
