removed all unused codes

--- a/src/components/SwapCatalogue/SwapCatalogue.module.scss
+++ b/src/components/SwapCatalogue/SwapCatalogue.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap");
 
 .dark {
   .lowerbox {
@@ -20,7 +20,7 @@
   }
 
   .bttn {
-    border: 2px solid #FFFFFF;
+    border: 2px solid #ffffff;
     color: white;
     font-weight: 300;
   }
@@ -101,9 +101,3 @@
   font-weight: 200;
   font-family: "Roboto";
 }
-
-/* .bttn:hover{
-    background-color: white;
-    color: #1F2235;
-    font-weight: 300;
-} */
